--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@material-icons/font": "^1.0.36",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
